# cerium

./: .gitignore  .gitmodules  LICENSE  README.md
evaluation/dev_examples/: a.out  example0.c  example1_correct.c  example1_error.c
project/: ddlog-build  ddlog-example  ddlog-run  type_checker.dl
project/framework/: Cargo.toml  build.rs
project/framework/benches/: changes_benchmark.rs  initial_benchmark.rs  stages_benchmark.rs
project/framework/benches/dataset/: program1_1.c
project/framework/benches/dataset/base_programs/: example1.c  example2.c
project/framework/benches/dataset/program1/: 0_program1_original.c  1_program1_change_param_type.c  2_program1_change_return_type.c  3_program1_change_arg.c  4_program1_add_fun.c  5_program1_delete_fun.c  6_program1_rename_fun.c  7_program1_rename_var.c  program1_2.c
project/framework/benches/dataset/program2/: 0_program2_change.c  0_program2_original.c  1_program2_change.c  1_program2_original.c  2_program2_change.c  2_program2_original.c  3_program2_change.c  3_program2_original.c  4_program2_change.c  4_program2_original.c  code_source.txt  program2_1.c
project/framework/convert_variant_derive/: Cargo.toml
project/framework/convert_variant_derive/src/: lib.rs
project/framework/src/: ast.rs  ddlog_interface.rs  definitions.rs  lib.rs  main.rs  parse_utils.rs  parser.rs  parser_interface.rs  standard_type_checker.rs
project/framework/tests/dev_examples/c/: example1.c  example2.c  example4.c  example6.c  example7.c
