[package]
name = "cerium-framework"
version = "0.1.0"
edition = "2021"

[build-dependencies]

[dependencies]
notify = "4.0.16"
clang = "1.0.3"
strum = "0.23"
strum_macros = "0.23"
# Dependencies for generated DDlog library.
differential_datalog = { path = "../type_checker_ddlog/differential_datalog"}
type_checker = { path = "../type_checker_ddlog"}
types = { path = "../type_checker_ddlog/types"}
