[package]
name = "cerium_framework"
version = "0.1.0"
edition = "2021"

[build-dependencies]

[dependencies]
notify = "4.0.16"
lang-c = "0.11.0"
# clang = "1.0.3"
# Dependencies for generated DDlog library.
differential_datalog = { path = "../type_checker_ddlog/differential_datalog" }
type_checker = { path = "../type_checker_ddlog" }
types = { path = "../type_checker_ddlog/types" }
# Dependencies for enum conversion macros.
convert_variant_derive = { path = "./convert_variant_derive" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "changes_benchmark"
harness = false

[[bench]]
name = "stages_benchmark"
harness = false
